--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,6 +6,18 @@ body {
   background-color: #E6EAF6;
   animation: body-appear 1s;
 }
+body::-webkit-scrollbar {
+  width: 1em;
+}
+html { margin-left: calc(100vw - 100%)}
+
+//body::-webkit-scrollbar-track {
+//  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+}
 
 button, input {
   outline: none !important;
